assets/_scss/_layout.scss
html {
	box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}
body {
	background: $bg; 
	min-width: $width-outer;
}

#content,
#template,
#cart {
	padding: 34px 0;
	min-height: 400px;
}

#template.centered {
	text-align: center;
	form {
		width: 300px;
		margin: 0 auto;
		text-align: left;
	}
}

.wrapper,
.container {
	width: 90%;
	max-width: $width;
	margin: 0 auto;
	@include clearfix;
}

.row { 
	@include clearfix;
	clear: both;
	padding-bottom: 0em;
	&.top-border {
		border-top: $border;
		margin-top: 3em;
		padding-top: 2em;
		@media all and (max-width: $m) {
			margin-top: 1.5rem;
			padding-top: 1.5rem;
		}
	}
	p {
		margin-right: 10px;
	}
}
.col { 
	display: block;
	float: left;
	width: 100%;
	margin-left: 2%;
	&.pull-left {
		margin-left: 0;
	}
}
.span_1 { width: 6.5%; }
.span_2 { width: 15.0%; }
.span_3 { width: 23.5%; }
.span_4 { width: 32.0%; }
.span_5 { width: 40.5%; }
.span_6 { width: 49.0%; }
.span_7 { width: 57.5%; }
.span_8 { width: 66.0%; }
.span_9 { width: 74.5%; }
.span_10 { width: 83.0%; }
.span_11 { width: 91.5%; }
.span_12 { width: 100%; }

.span_1,
.span_2,
.span_3,
.span_4,
.span_5,
.span_6,
.span_7,
.span_8,
.span_9 {
	@media all and (max-width: $s) {
		width: 100%;
		margin-left: 0;
	}
}

